// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a main branch 1`] = `
<Fragment>
  <Toggle
    disabled={true}
    onChange={[Function]}
    value={true}
  />
  <span
    className="spacer-left"
  >
    <DeferredSpinner
      loading={false}
    />
  </span>
  <HelpTooltip
    overlay="project_branch_pull_request.branch.auto_deletion.main_branch_tooltip"
  />
</Fragment>
`;

exports[`should render correctly for a non-main branch 1`] = `
<Fragment>
  <Toggle
    disabled={false}
    onChange={[Function]}
    value={true}
  />
  <span
    className="spacer-left"
  >
    <DeferredSpinner
      loading={false}
    />
  </span>
</Fragment>
`;
